--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   animated_splash: ^1.0.0
   page_slider: ^0.0.2
   step_progress_indicator: ^0.2.0+3
+  flutter_local_notifications: ^1.4.4+2
   webview_flutter:
     git:
       url: https://github.com/asjqkkkk/plugins.git
