--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   page_slider: ^0.0.2
   step_progress_indicator: ^0.2.0+3
   flutter_local_notifications: ^1.4.4+2
+  rxdart: ^0.23.1
   webview_flutter:
     git:
       url: https://github.com/asjqkkkk/plugins.git
