--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   provider: ^4.3.1 # for State management
   shared_preferences: ^0.5.12+4
   video_player: ^1.0.1
+  flutter_datetime_picker: ^1.3.5
+  rich_alert: ^0.1.32
   webview_flutter:
     git:
       url: https://github.com/asjqkkkk/plugins.git
