--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   video_player: ^1.0.1
   flutter_datetime_picker: ^1.3.5
   rich_alert: ^0.1.32
+  mobx: ^1.2.1+4
+  flutter_mobx: ^1.1.0+2
   webview_flutter:
     git:
       url: https://github.com/asjqkkkk/plugins.git
@@ -27,6 +29,8 @@ dependencies:
       ref: webview
 
 dev_dependencies:
+  build_runner: ^1.11.1
+  mobx_codegen: ^1.1.2
   flutter_test:
     sdk: flutter
 
